<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btnReturn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginVertical="16dp"
        android:src="@drawable/ic_back"
        android:background="@color/transparent"
        app:tint="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/scoreCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct"
                android:textColor="@color/green"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/scoreIncorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incorrect"
                android:textColor="@color/red"
                android:textSize="18sp"/>
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="32dp">

            <Button
                android:id="@+id/btnOption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="64dp"/>

            <Button
                android:id="@+id/btnOption2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="64dp"/>

            <Button
                android:id="@+id/btnOption3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="64dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="32dp"/>

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continueQuiz"
                android:backgroundTint="@color/light_green"
                android:textColor="@color/black"
                android:visibility="invisible"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
